# powerline-k8s

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.html  powerline_k8s.html  pyproject.toml  requirements.txt  search.js  search.json  setup.cfg  setup.py
.github/workflows/: build.yml  codecov.yml  coverage.yml  docs-publish.yml  docs.yml  publish-pypi.yml  publish.yml  pypi-publish.yml  ruff.yml
powerline_k8s/: __init__.py  segments.html  segments.py
src/powerline_k8s/: __init__.py  segments.py
src/tests/: test_powerline_k8s.py
