[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "powerline-k8s"
version = "1.5.3"
description = "A custom Powerline segment for displaying the current Kubernetes context and namespace"
authors = ["Jordan Duabe <me@jduabe.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/j4ckofalltrades/powerline-k8s"
repository = "https://github.com/j4ckofalltrades/powerline-k8s"
documentation = "https://j4ckofalltrades.github.io/powerline-k8s"
keywords = ["powerline", "kubernetes"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/j4ckofalltrades/powerline-k8s/issues"

[tool.poetry.dependencies]
python = "^3.9"
kubernetes = "^29.0.0"
powerline-status = "^2.7"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.4.0"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".idea",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "__init__.py"
]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
