[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powerline-k8s"
version = "1.5.4"
description = "A custom Powerline segment for displaying the current Kubernetes context and namespace"
authors = [{name = "Jordan Duabe", email = "me@jduabe.dev"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["powerline", "kubernetes"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "kubernetes>=33.1.0",
    "powerline-status>=2.7",
]

[project.urls]
Homepage = "https://github.com/j4ckofalltrades/powerline-k8s"
Repository = "https://github.com/j4ckofalltrades/powerline-k8s"
Documentation = "https://j4ckofalltrades.github.io/powerline-k8s"
"Bug Tracker" = "https://github.com/j4ckofalltrades/powerline-k8s/issues"

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
docs = [
    "pdoc>=15.0.4",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".idea",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "__init__.py"
]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
