[metadata]
name = powerline-k8s
version = 1.0.1-beta1
author = Jordan Duabe
author_email = jordan.duabe@gmail.com
description = A Powerline segment for showing the active Kubernetes context and namespace
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/j4ckofalltrades/powerline-k8s
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Terminals

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    kubernetes>=12.0.0
    powerline-status>=2.7

[options.packages.find]
where = src
