[metadata]
name = powerline-k8s
description = A custom Powerline segment for displaying the current Kubernetes context and namespace
version = 1.0.3
author = Jordan Duabe
author_email = me@jduabe.dev
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/j4ckofalltrades/powerline-k8s
keywords = powerline, kubernetes
project_urls =
    Source = https://github.com/j4ckofalltrades/powerline-k8s
    Tracker = https://github.com/j4ckofalltrades/powerline-k8s/issues
    Download = https://pypi.org/project/powerline-k8s/#files
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Environment :: Plugins
    Intended Audience :: Developers
    Topic :: Terminals

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    kubernetes>=17.17.0
    powerline-status>=2.7

[options.packages.find]
where = src
